@@ -692,6 +692,44 @@ name|getPoolSize
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|executorService
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|executorService
+operator|.
+name|getAllExecutorStatuses
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Test that submit doesn't throw NPEs
+name|executorService
+operator|.
+name|submit
+argument_list|(
+operator|new
+name|TestEventHandler
+argument_list|(
+name|mockedServer
+argument_list|,
+name|EventType
+operator|.
+name|M_SERVER_SHUTDOWN
+argument_list|,
+name|lock
+argument_list|,
+name|counter
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 specifier|private
 name|void
